Correct margins for #grid and .halfbloc to appear entered while aligned left

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,37 +56,57 @@ h2.marker {
   text-align: center;
 }
 
-.halfbloc, .burgerbloc, .verticalbloc, 
+#grid {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  padding: 0 0.5%;
+}
+
+.halfbloc, .burgerbloc, .vertbloc, 
 .hotdogbloc, .megabloc {
   box-sizing: border-box;
   display: inline-block;
 }
 
 .halfbloc {
-  width: 30%;
+  width: 32%;
+  margin: 0 0.5% 1% 0.5%;
+}
+
+.vertbloc {
+  width: 32%;
   margin: 0;
 }
 
-div.ratiowrapper {
+div.squareratio {
   width: 100%;
   padding-bottom: 100%;
   position: relative;
   background: #172343;
 }
 
-div.ratiowrapper > div {
-  position: absolute;
-  top: 0; bottom: 0; left: 0; right: 0;
-  color: white;
+div.vertratio {
+  width: 100%;
+  padding-bottom: 200%;
+  position: relative;
+  background: #12deef;
 }
 
-.verticalbloc {
+div.squareratio > div {
+  position: absolute;
+  top: 0; bottom: 0; left: 0; right: 0;
+  color: #B8B8B8;
+  box-sizing: border-box;
+}
+
+/*.verticalbloc {
   height: 800px;
   width: 33.3333%;
   margin: 0;
 }
 
-/*.hotdogbloc {
+.hotdogbloc {
   width: 100%;
   height: 400px;
   margin: 0;
@@ -110,14 +130,22 @@ div.ratiowrapper > div {
   width: 100%;
   margin: 0;
   text-align: center;
-} 
+}*/
 
 div#grid:nth-child(1n) {
   margin-top: 50px;
-} */
+}
 
 a {
   text-decoration: none;
+}
+
+.centerfix1 {
+  margin-left: -2em;
+}
+
+.centerfix2 {
+  margin-left: -3em;
 }
 
 
@@ -135,8 +163,9 @@ header {
 }
 
 header div {
-  width: 90%;
-  margin: 15px auto 15px auto;
+  box-sizing: border-box;
+  width: 95%;
+  margin: 15px auto;
 }
 
 header h1 {
@@ -289,8 +318,18 @@ div#day1 {
   background-color: #172343;
   /*background-image: linear-gradient(#172343, #446380, #FAF471);
   background-size: cover; */
-  text-align: left;
+  text-align: center;
 }
 div#day1 img {
   height: 90%;
+  margin-top: 3%;
+}
+
+/* Day 2
+----------------------------*/
+
+div#day2, div#day3 {
+  background-color: #12deef;
+  color: #333;
+  padding: 10%;
 }
